@@ -10726,15 +10726,28 @@ Random
       </child>
 
       <widget>
-	<class>GtkLabel</class>
-	<name>prompt3_label</name>
-	<label>A question to ask</label>
-	<justify>GTK_JUSTIFY_LEFT</justify>
-	<wrap>False</wrap>
-	<xalign>0.05</xalign>
-	<yalign>0.5</yalign>
-	<xpad>2</xpad>
-	<ypad>8</ypad>
+	<class>GtkHBox</class>
+	<name>prompt3_hbox</name>
+	<border_width>4</border_width>
+	<homogeneous>False</homogeneous>
+	<spacing>0</spacing>
+
+	<widget>
+	  <class>GtkLabel</class>
+	  <name>prompt3_label</name>
+	  <label>A question to ask</label>
+	  <justify>GTK_JUSTIFY_LEFT</justify>
+	  <wrap>False</wrap>
+	  <xalign>0.05</xalign>
+	  <yalign>0.5</yalign>
+	  <xpad>2</xpad>
+	  <ypad>12</ypad>
+	  <child>
+	    <padding>0</padding>
+	    <expand>True</expand>
+	    <fill>True</fill>
+	  </child>
+	</widget>
       </widget>
     </widget>
   </widget>
